# MeetSystem

./: .gitignore  CMakeLists.txt  KernelMeetingSystem.pro  MeetSystem.pro  README.md  adminpage.ui  forgetpassworddlg.cpp  forgetpassworddlg.ui  image.qrc  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  signupdialog.cpp  signupdialog.h  signupdialog.ui  sqlOperation.h
include/: adminpage.h  forgetpassworddlg.h  loginpage.h  maincontrol.h  signupdialog.h  sqlOperation.h
res/: image_all.qrc  meet.sql  sql_file.qrc
res/other/: loginSave.info
res/sql_db/: meetdatabase.db  sqlite_meet.sql
src/: adminpage.ui  forgetpassworddlg.cpp  image.qrc  loginpage.cpp  loginpage.ui  main.cpp  maincontrol.cpp  maincontrol.h  signupdialog.cpp  sqlOperation.cpp  sqlOperation.h
src/sql/: meetdatabase.db  mysql_meet.sql
src/src_admin/: adminpage.cpp  adminpage.h  adminpage.ui
src/src_login/: forgetpassworddlg.cpp  forgetpassworddlg.ui  loginpage.cpp  loginpage.h  loginpage.ui  signupdialog.cpp  signupdialog.ui
src/src_nav_pages/: employeemanagepage.cpp  employeemanagepage.h  employeemanagepage.ui  mymeeting.cpp  mymeeting.h  mymeeting.ui  newmeetingpage.cpp  newmeetingpage.h  newmeetingpage.ui  searchmeeting.cpp  searchmeeting.h  searchmeeting.ui
